--- a/COMP229-S2023-MidTerm-301289095/server/views/books/index.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/books/index.ejs
@@ -2,6 +2,7 @@
 
     <!-- MAIN CONTENT -->
     <div class="container">
+      Total: <%= books.length %>
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
           <h3>Favourite Books List </h3>
