Update route and other function for CRUD operation
Update route and other function for CRUD operation

--- a/COMP229-S2023-MidTerm-301289095/server/views/books/add.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/books/add.ejs
@@ -8,22 +8,22 @@
               <div class="form-group">
                 <label for="NameTextField">Title</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="Book Name" name="title" value="<%= book.Title %>" required>
+                placeholder="Book Name" name="title" required>
               </div>
               <div class="form-group">
                 <label for="PriceTextField">Price</label>
                 <input type="text" class="form-control" id="PriceTextField"
-                placeholder="Book Price" name="price" value="<%= book.Price %>"  required>
+                placeholder="Book Price" name="price" required>
               </div>
               <div class="form-group">
                 <label for="AuthorTextField">Author</label>
                 <input type="text" class="form-control" id="AuthorTextField"
-                placeholder="Book Author" name="author" value="<%= book.Author %>"  required>
+                placeholder="Book Author" name="author" required>
               </div>
               <div class="form-group">
                 <label for="GenreTextField">Genre</label>
                 <input type="text" class="form-control" id="GenreTextField"
-                placeholder="Book Genre" name="genre" value="<%= book.Genre %>"  required>
+                placeholder="Book Genre" name="genre" required>
               </div>
 
               <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
