--- a/COMP229-S2023-MidTerm-301289095/server/views/books/details.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/books/details.ejs
@@ -21,6 +21,11 @@
                 placeholder="Book Author" name="author" value="<%= book.Author %>"  required>
               </div>
               <div class="form-group">
+                <label for="DescriptionTextField">Description</label>
+                <input type="text" class="form-control" id="DescriptionTextField"
+                placeholder="Description" name="description" value="<%= book.Description %>"  required>
+              </div>
+              <div class="form-group">
                 <label for="GenreTextField">Genre</label>
                 <input type="text" class="form-control" id="GenreTextField"
                 placeholder="Book Genre" name="genre" value="<%= book.Genre %>"  required>
