--- a/COMP229-S2023-MidTerm-301289095/server/views/books/index.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/books/index.ejs
@@ -1,19 +1,19 @@
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
-    <div class="container">
-      Total: <%= BookList.length %>
+    <div class="container">      
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
           <h3>Favourite Books List </h3>
+          <h6>Total: <%= BookList.length %></h6>
           <!-- ------------------------ -->
           <!-- FIX THE ADD BUTTON BELOW -->
           <!-- ------------------------ -->
-          <a href="/books/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
-          <br>
+          <a href="/books/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>              
+          <br><br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
-              <thead>
+              <thead>                
                 <tr>
                   <th>Title</th>
                   <th class="text-center">Price</th>
