--- a/COMP229-S2023-MidTerm-301289095/server/views/content/index.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/content/index.ejs
@@ -1,13 +1,16 @@
 <% include ../partials/header.ejs %>
-
-    <!-- MAIN CONTENT -->
+ <!-- MAIN CONTENT -->
+ </div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %></h1>
-            <h2>Welcome to <%= title %></h2>
+      <h2>My favourite books home</h2>
+      <div class="jumbotron">
+        <div class="row" >
+        <div class="col-md-offset-1 col-md-12">          
+            <img src="/Assets/images/bg.jpg" width="800" >
+        </div>
         </div>
       </div>
+      </div>     
     </div>
 
 <% include ../partials/footer.ejs %>
