--- a/COMP229-S2023-MidTerm-301289095/client/Content/app.css
+++ b/COMP229-S2023-MidTerm-301289095/client/Content/app.css
@@ -1,3 +1,7 @@
+/* Student’s Name: Hemal Vaghela
+StudentID: 301289095 
+Date: June 25, 2023  */
+
 /* Custom CSS goes here */
 body {
   padding-bottom: 70px;
