--- a/COMP229-S2023-MidTerm-301289095/server/views/content/index.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/content/index.ejs
@@ -1,3 +1,9 @@
+// Student’s Name: Hemal Vaghela
+// StudentID: 301289095 
+// Date: June 25, 2023
+
+
+
 <% include ../partials/header.ejs %>
  <!-- MAIN CONTENT -->
  </div>
