--- a/COMP229-S2023-MidTerm-301289095/server/views/error.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/error.ejs
@@ -1,3 +1,8 @@
+<!-- Student’s Name: Hemal Vaghela
+StudentID: 301289095 
+Date: June 25, 2023 -->
+
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
