--- a/COMP229-S2023-MidTerm-301289095/server/views/partials/footer.ejs
+++ b/COMP229-S2023-MidTerm-301289095/server/views/partials/footer.ejs
@@ -1,3 +1,6 @@
+<!-- Student’s Name: Hemal Vaghela
+StudentID: 301289095 
+Date: June 25, 2023 -->
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container">
