--- a/Week8/client/src/app/partials/header/header.component.html
+++ b/Week8/client/src/app/partials/header/header.component.html
@@ -25,9 +25,11 @@ Date: July 10, 2023 -->
         <li class="nav-item">              
             <a class="nav-link" href="/service"><i class="fa-solid fa-gear"></i>Services </a>
         </li>
-        <!-- <li class="nav-item">              
+        <!--
+        <li class="nav-item">              
             <a class="nav-link" href="#"><i class="fa-solid fa-gamepad"></i>Games </a>
         </li>
+        
         <li class="nav-item">              
               <a class="nav-link" href="#"><i class="fa-solid fa-address-card"></i>Business Contacts List </a>
         </li> -->
